--- a/GestionEquipo.Server/GestionEquipo.Server.csproj
+++ b/GestionEquipo.Server/GestionEquipo.Server.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>da7a13f4-f90f-45af-9fd8-c3221feb5d09</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GestionEquipo.DB\GestionEquipo.DB.csproj" />
+    <ProjectReference Include="..\GestionEquipo.Shared\GestionEquipo.Shared.csproj" />
   </ItemGroup>
 
 </Project>
